compiler/testData/diagnostics/tests/redeclarations/ClassRedeclarationInDifferentFiles.kt
// FILE: f1.kt
package test

class <!REDECLARATION!>A<!>
class F1

// FILE: f2.kt
package test

class <!REDECLARATION!>A<!>
class F2